# queens

./: .gitignore  CMakeLists.txt  grid.c  grid.h  intset.c  level.c  level.h  main.c  main.cc  vcpkg.json  vector.c  vector.h  vector2.h
.github/workflows/: build.yml
src/: grid.c  grid.h  intset.h  level.c  level.h  main.c
